# EG3

./: .gitignore  README.md  pyproject.toml
.workbuddy/memory/: 2026-06-01.md  MEMORY.md
docs/: AI_NAMING_REGISTRY.md  DEVELOPMENT_METHOD.md  RESEARCH_NOTES.md  SYSTEM_FLOW.md
src/: config.py
src/core/: types.py
src/data/: seed_state.py
src/pipeline/: appraisal.py  llm_client.py  memory_retrieval.py  orchestrator.py  prompt_generator.py  response_decision.py  state_updater.py
src/server/: main.py
static/: index.html
